// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-password does not render if logged in 1`] = `
<sc-order-password enable-validation="" logged-in="" size="medium" style="display: none;">
  <mock:shadow-root></mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders 1`] = `
<sc-order-password enable-validation="" size="medium">
  <mock:shadow-root>
    <div class="password">
      <div>
        <sc-input help="" name="password" showlabel="" size="medium" type="password" value=""></sc-input>
      </div>
    </div>
  </mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders confirmation if provided 1`] = `
<sc-order-password confirmation="" enable-validation="" size="medium">
  <mock:shadow-root>
    <div class="password">
      <div>
        <sc-input help="" name="password" showlabel="" size="medium" type="password" value=""></sc-input>
      </div>
      <div>
        <sc-input help="Help" label="Label" placeholder="Placeholder" size="medium" type="password" value=""></sc-input>
      </div>
    </div>
  </mock:shadow-root>
</sc-order-password>
`;
